css/layouts/topic/topic.css
/* ... */
.nested-accordian-link .nested-details ul{
    padding-left: 52px;
    font-size: 12px;
    font-weight: normal;
    font-style: normal;
    font-stretch: normal;
    /* line-height: 2; */
    letter-spacing: normal;
    color: #202124;
    padding-bottom: 10px;
}
.nested-accordian-link .nested-details ul li{
    margin-bottom: 10px;

}
.doc-link p{
    padding-left: 25px !important;
}
#tg-sb-content details .nested-accordian-link .nested-details p{
    font-weight: 400;
    font-size: 13px;
    color: #5F6368;
    line-height: 20px;
    margin: 0;
    padding-left: 35px;
    padding-bottom: 10px;
}

